# linux_scripts

./: .gitignore  MANIFEST.in  README.md  admin.py  create_boundary.py  find_ip_info.py  find_sensinfo.py  fw_iplist_checker.py  get-info.sh  install-rust.sh  number_conversions.py  requirements.txt  setup.cfg  setup.py  show_plan.sh  ssh_connect.py  systemd.py  validate_ip.rs
ansible/: README.md  ansible.cfg  app_forms.yaml  docker.yaml  get-soft.yaml  init_config.yaml  inventory  jenkins.yaml  modern_commands.yaml
ansible/configs/: docker-compose.yaml
ansible/join_ipa/: README.md  inventory  join_ipa.yaml
ansible/personal_setup/: Readme.md  inventory  setup.yaml
bash/: find_ip_info.sh  find_sensitive_info.sh  get_fw_sources.sh  separator.sh  vm.sh
get_packs/: README.md  depends.txt  dwn.txt  exp_line.sh  get_depends.sh
src/bash/: find_ip_info.sh  get-info.sh
src/ladm/: __init__.py  admin_cli.py  fw_iplist_checker.py  ssh_config.py  systemd.py
src/ladm/bash/: exitVim.sh  find_ip_info.sh  find_sensitive_info.sh  get-info.sh  get_fw_sources.sh  separator.sh  vm.sh
src/ladm/python/templates/: timer.j2
ssh/: add_sshconfig.rs  connect.py  key_adder2.py  ssh_keygen.sh
systemd_service/: init_services.py
systemd_service/templates/: service.j2
templates/: Vagrantfile
vagrant/: README.md  Vagrantfile  ansible_nodes_2  simple_nodes_2
