[metadata]
name = ladm
version = 0.1.0
author = Stepan Kulikov
author_email = labbrat_social@pm.me
description = Scripts in Bash and Python for Linux administration
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.10
install_requires =
    Click
    pyyaml
    requests
    jinja2

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    ladm = ladm.admin_cli:adm
